--- a/pdf/templates/pdf/img.html
+++ b/pdf/templates/pdf/img.html
@@ -6,7 +6,7 @@
 <div class="col-md-8 mx-auto vh-100 d-flex flex-column justify-content-center align-items-center">
     <h5>Из JPG в PDF</h5>
 <div class="input-group mb-3">
-    <span class="input-group-text" id="basic-addon1">Имя конвертации</span>
+    <span class="input-group-text" id="basic-addon1">Описание</span>
     {{ form.name }}
 </div>
     {{ form.pdffile }}
