--- a/templates/main/navbar.html
+++ b/templates/main/navbar.html
@@ -35,6 +35,8 @@
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
               <li><a class="dropdown-item" href="{% url 'pdf:pdf' %}">PDFtoJPG</a></li>
               <li><a class="dropdown-item" href="{% url 'pdf:jpg' %}">JPGtoPDF</a></li>
+              <li><a class="dropdown-item" href="{% url 'pdf:txt' %}">PDFtoTXT</a></li>
+
             </ul>
           </li>
         </ul>
