--- a/pdf/templates/pdf/txt.html
+++ b/pdf/templates/pdf/txt.html
@@ -9,6 +9,12 @@
     {{ form.name }}
 </div>
     {{ form.pdffile }}
+    <div class="col-md-4">
+    <div class="input-group">
+    <span class="input-group-text" id="basic-addon1">Язык документа</span>
+    {{form.lang}}
+    </div>
+</div>
     <input class="btn btn-dark my-3" type="submit" value="MakeItEasy">
 </div>
 </form>
