--- a/templates/main/navbar.html
+++ b/templates/main/navbar.html
@@ -30,7 +30,7 @@
           {% endif %}
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Меню
+              PDF
             </a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
               <li><a class="dropdown-item" href="{% url 'pdf:pdf' %}">PDFtoJPG</a></li>
