--- a/users/templates/users/profile_pdf.html
+++ b/users/templates/users/profile_pdf.html
@@ -53,8 +53,8 @@
         <th scope="col"><input class="form-check-input" type="checkbox" onClick="toggle(this)" /></th>
         <th scope="col"></th>
         <th scope="col">Описание</th>
-        <th scope="col">PDF</th>
-        <th scope="col">JPG</th>
+        <th scope="col">Загруженный</th>
+        <th scope="col">Преобразованный</th>
         <th scope="col">Имя загруженного файла</th>
         <th scope="col">Дата загрузки</th>
         <th scope="col">Удаление</th>
