--- a/pdf/templates/pdf/txt.html
+++ b/pdf/templates/pdf/txt.html
@@ -9,7 +9,7 @@
     {{ form.name }}
 </div>
     {{ form.pdffile }}
-    <div class="col-md-4">
+    <div>
     <div class="input-group">
     <span class="input-group-text" id="basic-addon1">Язык документа</span>
     {{form.lang}}
