--- a/users/templates/users/profile_pdf.html
+++ b/users/templates/users/profile_pdf.html
@@ -74,8 +74,20 @@
         </th>    
         <th scope="row"><i class="bi bi-file-earmark-binary-fill"></i></th>
         <td>{{file.name}}</td>
-        <td><a href="{{file.pdffile.url}}" class="link-dark"><i class="bi bi-cloud-arrow-down-fill"></i></a></td>
-        <td><a href="{{file.zipimgfile.url}}" class="link-dark"><i class="bi bi-cloud-arrow-down-fill"></i></a></td>
+        <td>{% if file.pdffile %}
+          <a href="{{file.pdffile.url}}" class="link-dark">
+          <i class="bi bi-cloud-arrow-down-fill"></i></a>
+          {% else %}
+          <i class="bi bi-file-earmark-x-fill"></i>
+          {% endif %}
+        </td>
+        <td>{% if file.zipimgfile %}
+          <a href="{{file.zipimgfile.url}}" class="link-dark">
+          <i class="bi bi-cloud-arrow-down-fill"></i></a>
+          {% else %}
+          <i class="bi bi-file-earmark-x-fill"></i>
+          {% endif %}
+        </td>
         <td>{{file.pdfname}}</td>
         <td>{{file.time_created}}</td>
         <td><a href="{% url 'users:delete' file.pk %}" class="link-dark"><i class="bi bi-trash-fill"></i></a></td>
